--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "../web-server/src/app.js",
   "scripts": {
-    "start": "node ../web-server/src/app.js",
+    "start": "node ./src/app.js",
     "test": "nodemon app.js -e hbs,js,css"
   },
   "keywords": [],
